add RecyclerView Click Event

--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,7 +2,8 @@
 <RelativeLayout
 xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:onClick="onClick1">
 
 <TextView
     android:padding="12dp"
@@ -15,6 +16,8 @@ xmlns:android="http://schemas.android.com/apk/res/android"
     android:textAlignment="center"
     android:textColor="#fff"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" />
+    android:layout_height="wrap_content"/>
+
+
 
 </RelativeLayout>
